--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -127,6 +127,14 @@
                 "OCFL-Implementation-Notes": {
                     title: "OCFL Implementation Notes",
                     href: "../implementation-notes"
+                },
+                "PairTree": {
+                  title: "Pairtrees for Object Storage",
+                  href: "https://confluence.ucop.edu/display/Curation/PairTree",
+                  authors: [
+                    "J. Kunze", "M. Haye", "E. Hetzner", "M. Reyes", "C. Snavely"
+                  ],
+                  date: "12 August 2008"
                 }
             }
         };
@@ -718,7 +726,7 @@
         </p>
         <p>
           <a>OCFL Object</a>s within a given OCFL Storage Root MUST be the same as the OCFL specification
-           version as declared in the <a href="#root-conformance-declaration">Root Conformance Declaration</a>.
+           version as declared in the Root Conformance Declaration.
         </p>
         <p>
           An OCFL Storage Root SHOULD also contain the OCFL specification in human-readable plain-text format
@@ -746,6 +754,38 @@
 
     <section id="root-hierarchies">
         <h2>Storage Hierarchies</h2>
+        <p>
+          <a>OCFL Object Root</a>s MUST be stored either as the terminal resource at the end of a directory storage
+          hierarchy or as direct children of a containing <a>OCFL Storage Root</a>.
+        </p>
+        <p>
+          A common practice is to use a unique identifier scheme to compose this storage hierarchy, typically arranged
+          according to some form of the [[PairTree]] specification. Irrespective of the pattern chosen for the storage
+          hierarchies, the following restrictions apply:
+        </p>
+        <ol>
+          <li>Storage hierarchies MUST NOT include files within intermediate directories</li>
+          <li>Storage hierarchies MUST be terminated by OCFL Object Roots</li>
+          <li>Storage hierarchies within the same OCFL Storage Root SHOULD use just one layout pattern</li>
+          <li>Storage hierarchies within the same OCFL Storage Root SHOULD consistently use either a directory
+            hierarchy of OCFL Objects, top-level OCFL Objects, or OCFL Object ZIPs
+          </li>
+        </ol>
+        <p>
+          Additionally, the directory name (or filename minus the extension for zip files) of an OCFL Object Root
+          SHOULD correspond to the OCFL Object's full and complete identifier. To illustrate, for an OCFL Object with
+          the identifier <code>abcd123g</code>:
+        </p>
+        <ul>
+          <li>
+            Invalid:
+            <pre>/ab/cd/12/3g/... object files here</pre>
+          </li>
+          <li>
+            Valid:
+            <pre>/ab/cd/12/3g/abcd123g/... object files here</pre>
+          </li>
+        </ul>
     </section>
 
     <section id="root-extensions">
