--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -415,8 +415,8 @@
             sub-directory.
         </p>
         <p>
-            If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a> then the
-            name of the designated content sub-directory MUST be <code>content</code>. OCFL-compliant tools
+            If the key <code>contentDirectory</code> is not present in the <a href="#inventory">inventory file</a> then
+            the name of the designated content sub-directory MUST be <code>content</code>. OCFL-compliant tools
             (including any validators) MUST ignore all directories in the object version directory except for the
             designated content directory.
         </p>
